[gd_scene load_steps=3 format=3 uid="uid://cyfbctrc0xn1d"]

[ext_resource type="Script" path="res://Scripts/multiplayer.gd" id="1_hsy0m"]
[ext_resource type="PackedScene" uid="uid://bjbw0jl21dl2r" path="res://Scene/player.tscn" id="2_2aw71"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_hsy0m")
player_scene = ExtResource("2_2aw71")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scene/player.tscn")
spawn_path = NodePath("..")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Host_Button" type="Button" parent="HUD"]
offset_left = 24.0
offset_top = 360.0
offset_right = 318.0
offset_bottom = 464.0
theme_override_font_sizes/font_size = 66
text = "Host"

[node name="Join_Button" type="Button" parent="HUD"]
offset_left = 24.0
offset_top = 488.0
offset_right = 318.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 66
text = "Join"

[node name="PlayerCount" type="Label" parent="HUD"]
offset_left = 960.0
offset_top = 24.0
offset_right = 1144.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HUD/Host_Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HUD/Join_Button" to="." method="_on_join_button_pressed"]
